--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,22 +11,18 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">Sir Gawain and the Green Knight</i><br/>
-			was published in <time>YEAR</time>.</p>
-			<p>This ebook was produced for<br/>
+			<p><i epub:type="se:name.publication.poem">Sir Gawain and the Green Knight</i><br/>
+			was written between <time>1350</time> and <time>1400</time>.</p>
+			<p>This ebook was transcribed and produced for<br/>
 			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER_NAME</a>,<br/>
-			and is based on a transcription produced in <time>TRANSCRIPTION_YEAR</time> by<br/>
-			<b epub:type="z3998:personal-name">TRANSCRIBER_1_NAME</b>, <b epub:type="z3998:personal-name">TRANSCRIBER_2_NAME</b>, and <a href="https://www.pgdp.net/">Distributed Proofreaders</a><br/>
-			for<br/>
-			<a href="TRANSCRIPTION_URL">TRANSCRIPTION_SOURCE</a><br/>
-			and on digital scans from<br/>
-			<a href="PAGE_SCANS_URL">PAGE_SCANS_SOURCE</a>.</p>
+			<a href="https://www.linkedin.com/in/emma-sweeney-554927190/">Emma Sweeney</a>,<br/>
+			and is based on digital scans from the<br/>
+			<a href="https://catalog.hathitrust.org/Record/000391131">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in <time>YEAR</time> by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST_NAME</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">The Green Knight Preparing to Battle Sir Beaumains</i>,<br/>
+			a painting completed in <time>1922</time> by<br/>
+			<a href="https://en.wikipedia.org/wiki/N.C._Wyeth"><abbr epub:type="z3998:given-name">N. C.</abbr> Wyeth</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in <time>2014</time> and <time>2009</time> by<br/>
