[Editorial] Correct note references

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -495,7 +495,7 @@
 					<p>Lights and trimmings. <a href="fit-3.xhtml#noteref-144" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-145" epub:type="endnote">
-					<p><dfn>Conduit</dfn>: any song in honour of the Christmas season such as we now call carol, <abbr epub:type="z3998:initialism">e.g.</abbr> the famous <i xml:lang="la">Caput apri defero</i>. The “carols” mentioned in the line are, of course, the songs accompanying dance commented on in <a href="#note-9">the note to <span epub:type="z3998:roman">iii</span></a>. <a href="fit-3.xhtml#noteref-145" epub:type="backlink">↩</a></p>
+					<p><dfn>Conduit</dfn>: any song in honour of the Christmas season such as we now call carol, <abbr epub:type="z3998:initialism">e.g.</abbr> the famous <i xml:lang="la">Caput apri defero</i>. The “carols” mentioned in the line are, of course, the songs accompanying dance commented on in <a href="#note-9">note 9</a>. <a href="fit-3.xhtml#noteref-145" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-146" epub:type="endnote">
 					<p>Turn out best. <a href="fit-3.xhtml#noteref-146" epub:type="backlink">↩</a></p>
@@ -514,7 +514,7 @@
 					<p>Reaching. <a href="fit-3.xhtml#noteref-150" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-151" epub:type="endnote">
-					<p><dfn>Tressure</dfn>: properly the wire with which the fret, or jewelled open-work headdress, was built up. The lady was a leader of fashion, for this headdress was not common till the time of Richard <span epub:type="z3998:roman">II</span>. The old dame, who still wears (see <a href="#note-94">xxxix</a>) a “gorget” or wimple, is no doubt meant to appear as still following a fashion which is a generation old. <a href="fit-3.xhtml#noteref-151" epub:type="backlink">↩</a></p>
+					<p><dfn>Tressure</dfn>: properly the wire with which the fret, or jewelled open-work headdress, was built up. The lady was a leader of fashion, for this headdress was not common till the time of Richard <span epub:type="z3998:roman">II</span>. The old dame, who still wears (see <a href="#note-94">note 94</a>) a “gorget” or wimple, is no doubt meant to appear as still following a fashion which is a generation old. <a href="fit-3.xhtml#noteref-151" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-152" epub:type="endnote">
 					<p>Fate. <a href="fit-3.xhtml#noteref-152" epub:type="backlink">↩</a></p>
@@ -602,7 +602,7 @@
 					<p><dfn>Tintagel</dfn>: the seat of Gorlois, Duke of Cornwall. The story of how his duchess, Igerne, was deceived by Merlin’s arts into believing that Uther was Gorlois will be found in Geoffrey’s <i epub:type="se:name.publication.book">History</i>, <span epub:type="z3998:roman">VIII</span> 19, 20. Morgan was presumably her daughter by Gorlois, but I can find no record of the fact. <a href="fit-4.xhtml#noteref-179" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-180" epub:type="endnote">
-					<p><dfn>Books of Britain</dfn>: <abbr epub:type="z3998:initialism">i.e.</abbr> the <i epub:type="se:name.publication.poem">Bruts</i> mentioned in <a href="#note-6">the note to <span epub:type="z3998:roman">i</span></a>. <a href="fit-4.xhtml#noteref-180" epub:type="backlink">↩</a></p>
+					<p><dfn>Books of Britain</dfn>: <abbr epub:type="z3998:initialism">i.e.</abbr> the <i epub:type="se:name.publication.poem">Bruts</i> mentioned in <a href="#note-6">note 6</a>. <a href="fit-4.xhtml#noteref-180" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
