[Editorial] Modernize hyphenation and spelling (Endnotes, Glossary)

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -133,7 +133,7 @@
 					<p>Such bragging or “gabbing,” as it was called, is not uncommon in medieval romances. <a href="fit-1.xhtml#noteref-36" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-37" epub:type="endnote">
-					<p>Stedfast. <a href="fit-1.xhtml#noteref-37" epub:type="backlink">↩</a></p>
+					<p>Steadfast. <a href="fit-1.xhtml#noteref-37" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-38" epub:type="endnote">
 					<p>Covenant. <a href="fit-1.xhtml#noteref-38" epub:type="backlink">↩</a></p>
@@ -160,7 +160,7 @@
 					<p>Interludes were properly plays, usually farcical, introduced between the acts of the mystery plays or moralities. So the beheading is a relief from the customary courtly carols. <a href="fit-1.xhtml#noteref-45" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-46" epub:type="endnote">
-					<p>Tapestry behind daïs. <a href="fit-1.xhtml#noteref-46" epub:type="backlink">↩</a></p>
+					<p>Tapestry behind dais. <a href="fit-1.xhtml#noteref-46" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-47" epub:type="endnote">
 					<p>Runs by. <a href="fit-2.xhtml#noteref-47" epub:type="backlink">↩</a></p>
@@ -189,13 +189,13 @@
 					<p>The kerchief mentioned is the “kerchief of cointise”; it was usually worn at tournaments as a lady’s favour. <a href="fit-2.xhtml#noteref-54" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-55" epub:type="endnote">
-					<p>Saddle-bows. <a href="fit-2.xhtml#noteref-55" epub:type="backlink">↩</a></p>
+					<p>Saddlebows. <a href="fit-2.xhtml#noteref-55" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-56" epub:type="endnote">
 					<p>Parrots. <a href="fit-2.xhtml#noteref-56" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-57" epub:type="endnote">
-					<p>Doves and true-love knots. <a href="fit-2.xhtml#noteref-57" epub:type="backlink">↩</a></p>
+					<p>Doves and truelove knots. <a href="fit-2.xhtml#noteref-57" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-58" epub:type="endnote">
 					<p>Embossed (in embroidery). <a href="fit-2.xhtml#noteref-58" epub:type="backlink">↩</a></p>
@@ -234,7 +234,7 @@
 					<p>Knightly virtues. <a href="fit-2.xhtml#noteref-65" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-66" epub:type="endnote">
-					<p>In the romances Arthur is usually a mere figure-head and such criticisms of him are not uncommon. <a href="fit-2.xhtml#noteref-66" epub:type="backlink">↩</a></p>
+					<p>In the romances Arthur is usually a mere figurehead and such criticisms of him are not uncommon. <a href="fit-2.xhtml#noteref-66" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-67" epub:type="endnote">
 					<p><dfn>Logres</dfn>: England south of the Humber, from Welsh <i xml:lang="cy">Lloegyr</i>. <a href="fit-2.xhtml#noteref-67" epub:type="backlink">↩</a></p>
@@ -275,7 +275,7 @@
 					<p><dfn>Hornwork</dfn>: described in <i epub:type="se:name.publication.book"><abbr>N. E. D.</abbr></i> as “a single-fronted outwork the head of which consists of two demi-bastions connected by a curtain and joined to the main work by two parallel wings.” <a href="fit-2.xhtml#noteref-78" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-79" epub:type="endnote">
-					<p>Watch-towers. <a href="fit-2.xhtml#noteref-79" epub:type="backlink">↩</a></p>
+					<p>Watchtowers. <a href="fit-2.xhtml#noteref-79" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-80" epub:type="endnote">
 					<p>Man. <a href="fit-2.xhtml#noteref-80" epub:type="backlink">↩</a></p>
@@ -290,10 +290,10 @@
 					<p>A mantle of silk. <a href="fit-2.xhtml#noteref-83" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-84" epub:type="endnote">
-					<p>Table-cloth. <a href="fit-2.xhtml#noteref-84" epub:type="backlink">↩</a></p>
+					<p>Tablecloth. <a href="fit-2.xhtml#noteref-84" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-85" epub:type="endnote">
-					<p>Salt-cellar. <a href="fit-2.xhtml#noteref-85" epub:type="backlink">↩</a></p>
+					<p>Saltcellar. <a href="fit-2.xhtml#noteref-85" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-86" epub:type="endnote">
 					<p>Coals. <a href="fit-2.xhtml#noteref-86" epub:type="backlink">↩</a></p>
