--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -82,7 +82,7 @@
 					<p>Verb, to endure.</p>
 				</dd>
 				<dd epub:type="glossdef">
-					<p><abbr>Adj.</abbr>, persistent, stedfast.</p>
+					<p><abbr>Adj.</abbr>, persistent, steadfast.</p>
 				</dd>
 				<dt id="druery" epub:type="glossterm">
 					<dfn>Druery</dfn>
