[Editorial] Modernize some spelling (poem)

--- a/src/epub/text/fit-1.xhtml
+++ b/src/epub/text/fit-1.xhtml
@@ -154,7 +154,7 @@
 				<p>
 					<span>The year was yet young, ’twas the day of New Year,</span>
 					<br/>
-					<span>And double (as is due) on the daïs was served;</span>
+					<span>And double (as is due) on the dais was served;</span>
 					<br/>
 					<span>Soon as the King with his knights had come into hall</span>
 					<br/>
@@ -182,7 +182,7 @@
 					<br/>
 					<span>Queen Guenore full gay was graith’d<a href="endnotes.xhtml#note-12" id="noteref-12" epub:type="noteref">12</a> in the midst</span>
 					<br/>
-					<span>On the royal daïs, royally array’d</span>
+					<span>On the royal dais, royally array’d</span>
 					<br/>
 					<span>With sendal at the sides, and a ceiling above her,</span>
 					<br/>
@@ -272,7 +272,7 @@
 					<br/>
 					<span>And Urien’s son, Ewain, ate with his Grace.</span>
 					<br/>
-					<span>These were dight on the daïs and daintily served,</span>
+					<span>These were dight on the dais and daintily served,</span>
 					<br/>
 					<span>And many a sickar man sat at the sideboards.</span>
 					<br/>
@@ -512,7 +512,7 @@
 					<br/>
 					<span>This áthel híes him ín and the hall enters,</span>
 					<br/>
-					<span>Driving to the daïs: no danger he fear’d.</span>
+					<span>Driving to the dais: no danger he fear’d.</span>
 					<br/>
 					<span>He gave none greeting but gazed ay before him,</span>
 					<br/>
@@ -580,7 +580,7 @@
 					<p epub:type="z3998:roman">XII</p>
 				</header>
 				<p>
-					<span>By the daïs he marks this marvel of a man,</span>
+					<span>By the dais he marks this marvel of a man,</span>
 					<br/>
 					<span>And courteously accosts him, that coward was never:</span>
 					<br/>
@@ -804,7 +804,7 @@
 					<br/>
 					<span>That the King’s own person to combat be call’d,</span>
 					<br/>
-					<span>Tho’ yourself be desirous to take up the suit,</span>
+					<span>Though yourself be desirous to take up the suit,</span>
 					<br/>
 					<span>While so bold men on bench about you are sitting⁠—</span>
 					<br/>
@@ -844,7 +844,7 @@
 				<p>
 					<span>Then commanded the King that the Knight should arise;</span>
 					<br/>
-					<span>And he drew from his seat, and came down from the daïs,</span>
+					<span>And he drew from his seat, and came down from the dais,</span>
 					<br/>
 					<span>Kneel’d to the King, and claspèd the weapon;</span>
 					<br/>
@@ -910,7 +910,7 @@
 					<br/>
 					<span>I may be found upon fold, and fetch thee such wages</span>
 					<br/>
-					<span>As thou deal’st me to-day this daïs beside.”</span>
+					<span>As thou deal’st me to-day this dais beside.”</span>
 					<br/>
 					<span>“Whither,” said the wight, “shall I wend on that errand?</span>
 					<br/>
@@ -958,7 +958,7 @@
 				<p>
 					<span>The Green Knight on ground graithly<a href="endnotes.xhtml#note-40" id="noteref-40" epub:type="noteref">40</a> him dresses,</span>
 					<br/>
-					<span>A little he louts,<a href="endnotes.xhtml#note-41" id="noteref-41" epub:type="noteref">41</a> to let the skin shew,</span>
+					<span>A little he louts,<a href="endnotes.xhtml#note-41" id="noteref-41" epub:type="noteref">41</a> to let the skin show,</span>
 					<br/>
 					<span>His long lovely locks he lays o’er his crown,</span>
 					<br/>
@@ -1018,7 +1018,7 @@
 				<p>
 					<span>For the head in his hand he holds up aright,</span>
 					<br/>
-					<span>Toward the dukes on the daïs he dresses the face,</span>
+					<span>Toward the dukes on the dais he dresses the face,</span>
 					<br/>
 					<span>And it lifts up its lids, and looks with its eyes,</span>
 					<br/>
@@ -1090,7 +1090,7 @@
 					<br/>
 					<span>“Now, Sir, hang up thine axe, that has hewen enough.”</span>
 					<br/>
-					<span>Then over the daïs ’twas dight on a dorser,<a href="endnotes.xhtml#note-46" id="noteref-46" epub:type="noteref">46</a></span>
+					<span>Then over the dais ’twas dight on a dorser,<a href="endnotes.xhtml#note-46" id="noteref-46" epub:type="noteref">46</a></span>
 					<br/>
 					<span>Where all might behold it on high and marvel,</span>
 					<br/>
