--- a/src/epub/text/fit-2.xhtml
+++ b/src/epub/text/fit-2.xhtml
@@ -28,7 +28,7 @@
 					<br/>
 					<span>But if the end be heavy, have ye no wonder:</span>
 					<br/>
-					<span>For tho’ men’s minds are merry, when mead they have ta’en,</span>
+					<span>For though men’s minds are merry, when mead they have ta’en,</span>
 					<br/>
 					<span>A year swiftly yerns<a href="endnotes.xhtml#note-47" id="noteref-47" epub:type="noteref">47</a> and yields ne’er the same⁠—</span>
 					<br/>
@@ -302,7 +302,7 @@
 					<p epub:type="z3998:roman">XXVII</p>
 				</header>
 				<p>
-					<span>Then they shew’d him the shield⁠—’twas of shéer gùles,</span>
+					<span>Then they show’d him the shield⁠—’twas of shéer gùles,</span>
 					<br/>
 					<span>With the pentacle<a href="endnotes.xhtml#note-60" id="noteref-60" epub:type="noteref">60</a> painted in pure gold on it.</span>
 					<br/>
@@ -312,7 +312,7 @@
 					<br/>
 					<span>Now why it should ’long to the leal Gawain</span>
 					<br/>
-					<span>I am intent to tell you, tho’ my tale may linger;</span>
+					<span>I am intent to tell you, though my tale may linger;</span>
 					<br/>
 					<span>’Tis a sign that Solomon sometime appointed</span>
 					<br/>
@@ -818,7 +818,7 @@
 					<br/>
 					<span>Fit man for a lordship o’er loyal lieges.</span>
 					<br/>
-					<span>He stept to a chamber and straightway bade choose</span>
+					<span>He stepped to a chamber and straightway bade choose</span>
 					<br/>
 					<span>A goodly esquire, to escort him and serve,</span>
 					<br/>
@@ -992,7 +992,7 @@
 					<p epub:type="z3998:roman">XXXIX</p>
 				</header>
 				<p>
-					<span>When the dinner was done, and the daïs risen,</span>
+					<span>When the dinner was done, and the dais risen,</span>
 					<br/>
 					<span>It was near to the night that the time drew nigh,</span>
 					<br/>
@@ -1148,7 +1148,7 @@
 					<br/>
 					<span>Both at mess and at meal-time men full doughty</span>
 					<br/>
-					<span>Daintiest dishes dress’d on the daïs.</span>
+					<span>Daintiest dishes dress’d on the dais.</span>
 					<br/>
 					<span>That ancient of eld at the end of the board,</span>
 					<br/>
@@ -1390,7 +1390,7 @@
 					<br/>
 					<span>A bargain, I beg ye! We’ll abide by it fair,</span>
 					<br/>
-					<span>Whether worthless our wins or aught worth shall befal.”</span>
+					<span>Whether worthless our wins or aught worth shall befall.”</span>
 					<br/>
 					<span>“In God’s name,” said Gawain, “I grant it you fain;</span>
 					<br/>
