--- a/src/epub/text/fit-3.xhtml
+++ b/src/epub/text/fit-3.xhtml
@@ -158,7 +158,7 @@
 					<br/>
 					<span>Slipt him down slyly, and look’d as if sleeping.</span>
 					<br/>
-					<span>Then stept she stilly, and stole to the bed,</span>
+					<span>Then stepped she stilly, and stole to the bed,</span>
 					<br/>
 					<span>Cast up the curtain, and creeping within it</span>
 					<br/>
@@ -602,7 +602,7 @@
 					<br/>
 					<span>“Fair gain!” said the goodman, “gramercy therefor;</span>
 					<br/>
-					<span>Better worth tho’ it were if ye would but discover</span>
+					<span>Better worth though it were if ye would but discover</span>
 					<br/>
 					<span>Where ye won this same wealth by force of your wits.”</span>
 					<br/>
@@ -828,7 +828,7 @@
 					<br/>
 					<span>That durst I ne’er do, lest denayèd I were,</span>
 					<br/>
-					<span>And, refus’d, I’m at fault tho’ fairly I offer.”</span>
+					<span>And, refus’d, I’m at fault though fairly I offer.”</span>
 					<br/>
 					<span>“By my faith,” said the fair, “and who may refuse you?</span>
 					<br/>
@@ -1042,7 +1042,7 @@
 					<br/>
 					<span>His hair bristled high, and so angerly snorted,</span>
 					<br/>
-					<span>Many fear’d for that free lest the worse him befal.</span>
+					<span>Many fear’d for that free lest the worse him befall.</span>
 					<br/>
 					<span>Then set forth the swine and made swift at his foe,</span>
 					<br/>
@@ -1632,7 +1632,7 @@
 					<br/>
 					<span>But the virtues who knew that are knitted herein</span>
 					<br/>
-					<span>He’ld appraise it perchance at a price very high;</span>
+					<span>He’d appraise it perchance at a price very high;</span>
 					<br/>
 					<span>For the man that is girt with this girdle of green,</span>
 					<br/>
@@ -1900,7 +1900,7 @@
 					<br/>
 					<span>Then assigns he a servant to set him i’ the way,</span>
 					<br/>
-					<span>And conduct him by the downs (lest dole him befal),</span>
+					<span>And conduct him by the downs (lest dole him befall),</span>
 					<br/>
 					<span>And the forest track, where through frith he should fare,</span>
 					<br/>
