--- a/src/epub/text/fit-4.xhtml
+++ b/src/epub/text/fit-4.xhtml
@@ -104,7 +104,7 @@
 					<br/>
 					<span>Or the pride of the pendants, though polisht they were,</span>
 					<br/>
-					<span>And tho’ the glittering gold gleam’d at the ends,</span>
+					<span>And though the glittering gold gleam’d at the ends,</span>
 					<br/>
 					<span>But to save his dear soul, when to suffer behoved⁠—</span>
 					<br/>
@@ -582,7 +582,7 @@
 					<br/>
 					<span>“Nay,” quoth Gawain, “by God, that gave to me life,</span>
 					<br/>
-					<span>I shall grudge thee not a grain any grame<a href="endnotes.xhtml#note-170" id="noteref-170" epub:type="noteref">170</a> that befals;</span>
+					<span>I shall grudge thee not a grain any grame<a href="endnotes.xhtml#note-170" id="noteref-170" epub:type="noteref">170</a> that befalls;</span>
 					<br/>
 					<span>But mind thee! one stroke! and quite still shall I stand,</span>
 					<br/>
@@ -866,7 +866,7 @@
 					<br/>
 					<span>And fiercely it flung to the green man on field:</span>
 					<br/>
-					<span>“Look ye! the false weed! and foul it befal!</span>
+					<span>“Look ye! the false weed! and foul it befall!</span>
 					<br/>
 					<span>I cared for thy knock, and cowardice taught me</span>
 					<br/>
@@ -1052,7 +1052,7 @@
 					<br/>
 					<span>All the renown that runs of the Round Table;</span>
 					<br/>
-					<span>And that witchcraft she wrought, your wits to dumfound,</span>
+					<span>And that witchcraft she wrought, your wits to dumbfound,</span>
 					<br/>
 					<span>And to daunt Queen Guenore, and do her to death</span>
 					<br/>
