[Editorial] Correct mismatched dashes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -544,7 +544,7 @@
 					<p>Body-piece. <a href="fit-4.xhtml#noteref-160" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-161" epub:type="endnote">
-					<p>Love-lace. <a href="fit-4.xhtml#noteref-161" epub:type="backlink">↩</a></p>
+					<p>Lovelace. <a href="fit-4.xhtml#noteref-161" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-162" epub:type="endnote">
 					<p>Good condition. <a href="fit-4.xhtml#noteref-162" epub:type="backlink">↩</a></p>
