--- a/src/epub/text/fit-1.xhtml
+++ b/src/epub/text/fit-1.xhtml
@@ -28,7 +28,7 @@
 					<br/>
 					<span>Who kingdoms then conquered, and princes became</span>
 					<br/>
-					<span>Of all the wealth, wellnigh, in the West Isles.</span>
+					<span>Of all the wealth, well-nigh, in the West Isles.</span>
 					<br/>
 					<span>Sóon as the róyal Rómulus to Rome made his way,</span>
 					<br/>
@@ -142,7 +142,7 @@
 					<br/>
 					<span class="i8">And the proudest Prince was he;</span>
 					<br/>
-					<span class="i8">Ye might not find to-day</span>
+					<span class="i8">Ye might not find today</span>
 					<br/>
 					<span class="i8">So brave a company.</span>
 				</p>
@@ -910,7 +910,7 @@
 					<br/>
 					<span>I may be found upon fold, and fetch thee such wages</span>
 					<br/>
-					<span>As thou deal’st me to-day this dais beside.”</span>
+					<span>As thou deal’st me today this dais beside.”</span>
 					<br/>
 					<span>“Whither,” said the wight, “shall I wend on that errand?</span>
 					<br/>
