--- a/src/epub/text/fit-2.xhtml
+++ b/src/epub/text/fit-2.xhtml
@@ -1052,7 +1052,7 @@
 					<br/>
 					<span>The elder had a gorget<a href="endnotes.xhtml#note-94" id="noteref-94" epub:type="noteref">94</a> gear’d o’er her throat,</span>
 					<br/>
-					<span>A chin full swart, in a chalkwhite chimble,<a href="endnotes.xhtml#note-95" id="noteref-95" epub:type="noteref">95</a></span>
+					<span>A chin full swart, in a chalk-white chimble,<a href="endnotes.xhtml#note-95" id="noteref-95" epub:type="noteref">95</a></span>
 					<br/>
 					<span>Fórehead fólden in sílk, her front all muffled,</span>
 					<br/>
@@ -1306,7 +1306,7 @@
 					<br/>
 					<span>And the first of the year ye shall fare on your way</span>
 					<br/>
-					<span>To your mark at mid-morn, to make what you like</span>
+					<span>To your mark at midmorn, to make what you like</span>
 					<br/>
 					<span class="i13">beside.</span>
 					<br/>
