--- a/src/epub/text/fit-4.xhtml
+++ b/src/epub/text/fit-4.xhtml
@@ -386,7 +386,7 @@
 					<br/>
 					<span>Shapes him by a shore<a href="endnotes.xhtml#note-166" id="noteref-166" epub:type="noteref">166</a> at the edge of a shaw,</span>
 					<br/>
-					<span>And rides down the hill-side right to the valley;</span>
+					<span>And rides down the hillside right to the valley;</span>
 					<br/>
 					<span>He look’d o’er the waste and full wild he ween’d it,</span>
 					<br/>
@@ -570,7 +570,7 @@
 					<br/>
 					<span>And now at this New-Year thou needs must requite.</span>
 					<br/>
-					<span>To-day in this dale we shall deal by ourselves,</span>
+					<span>Today in this dale we shall deal by ourselves,</span>
 					<br/>
 					<span>Here is none to say nay, knock as we like.</span>
 					<br/>
