--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Green Knight Preparing to Battle Sir Beaumains</i>,<br/>
 			a painting completed in <time>1922</time> by<br/>
-			<a href="https://en.wikipedia.org/wiki/N.C._Wyeth"><abbr epub:type="z3998:given-name">N. C.</abbr> Wyeth</a>.<br/>
+			<a href="https://en.wikipedia.org/wiki/N._C._Wyeth"><abbr epub:type="z3998:given-name">N. C.</abbr> Wyeth</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in <time>2014</time> and <time>2009</time> by<br/>
