--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -5,7 +5,7 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="frontmatter z3998:fiction">
+	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="preface" epub:type="preface">
 			<h2 epub:type="title">Preface</h2>
 			<p>The original of the poem here printed can be found in several editions, of which the most accessible are that published by the Early English Text Society and the more recent Clarendon Press edition, excellently annotated by Tolkien and Gordon.</p>
