Add editor to slug and cover/titlepage

--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -12,9 +12,7 @@
 			<p>The present version, which is intended for the ordinary reader, is a lineal rendering, and has therefore the same number of lines as the original, <abbr>viz.</abbr> 2,530; I have sought to preserve the alliterative metre (with certain simplifications mentioned in the Introduction) and as much of the language as was possible without being obscure. The rhyming pieces, which usually alliterate also, at the end of each stanza are often difficult, and I will only say that I have done what I could with them.</p>
 			<p>I have followed the text of the Clarendon Press edition mentioned above, and my obligations to that edition are hereby heartily acknowledged, though I have not invariably accepted its interpretations.</p>
 			<footer>
-				<p epub:type="z3998:signature">
-					<abbr epub:type="z3998:personal-name">S. O. A.</abbr>
-				</p>
+				<p epub:type="z3998:signature"><abbr epub:type="z3998:personal-name">S. O.</abbr> Andrew</p>
 			</footer>
 		</section>
 	</body>
